overflow issue resolved on about page mobile

--- a/about_page.scss
+++ b/about_page.scss
@@ -52,6 +52,7 @@
         width: 100vw;
         position: relative;
         overflow-y: hidden;
+        overflow-x: hidden;
 
         .back_button {
             width: 100%;
